load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "versions.json",
        "versions.bzl.tpl",
        "versions.bzl",
    ],
    visibility = ["//util:__pkg__"],
)

bzl_library(
    name = "zig_library",
    srcs = ["zig_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:bazel_builtin",
        "//zig/private/common:data",
        "//zig/private/common:escape_label",
        "//zig/private/common:filetypes",
        "//zig/private/providers:zig_module_info",
    ],
)

bzl_library(
    name = "zig_c_library",
    srcs = ["zig_c_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:bazel_builtin",
        "//zig/private/common:data",
        "//zig/private/common:filetypes",
        "//zig/private/providers:zig_module_info",
    ],
)

bzl_library(
    name = "zig_test",
    # Gazelle removes the srcs attribute for some reason.
    srcs = ["zig_test.bzl"],  # keep
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:zig_build",
        "//zig/private/common:zig_docs",
    ],
)

bzl_library(
    name = "settings",
    srcs = ["settings.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = ["@bazel_skylib//rules:common_settings"],
)

bzl_library(
    name = "zig_configure",
    srcs = ["zig_configure.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        ":settings",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "zig_binary",
    srcs = ["zig_binary.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:zig_build",
        "//zig/private/common:zig_docs",
    ],
)

bzl_library(
    name = "zig_static_library",
    srcs = ["zig_static_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:zig_build",
        "//zig/private/common:zig_docs",
    ],
)

bzl_library(
    name = "zig_shared_library",
    srcs = ["zig_shared_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:zig_build",
        "//zig/private/common:zig_docs",
    ],
)

bzl_library(
    name = "zig_toolchain",
    srcs = ["zig_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/providers:zig_toolchain_info",
        "@aspect_bazel_lib//lib:paths",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "zig_target_toolchain",
    srcs = ["zig_target_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:zig_target_triple",
        "//zig/private/providers:zig_target_info",
    ],
)

bzl_library(
    name = "cc_helper",
    srcs = ["cc_helper.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "cc_linkopts",
    srcs = ["cc_linkopts.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "zig_toolchain_header",
    srcs = ["zig_toolchain_header.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "resolved_target_toolchain",
    srcs = ["resolved_target_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//zig:__subpackages__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":cc_helper.bzl",
        ":cc_linkopts.bzl",
        ":platforms.bzl",
        ":resolved_target_toolchain.bzl",
        ":resolved_toolchain.bzl",
        ":settings.bzl",
        ":versions.bzl",
        ":versions.bzl.tpl",
        ":versions.json",
        ":zig_binary.bzl",
        ":zig_c_library.bzl",
        ":zig_configure.bzl",
        ":zig_library.bzl",
        ":zig_shared_library.bzl",
        ":zig_static_library.bzl",
        ":zig_target_toolchain.bzl",
        ":zig_test.bzl",
        ":zig_toolchain.bzl",
        ":zig_toolchain_header.bzl",
        "//zig/private/bzlmod:all_files",
        "//zig/private/common:all_files",
        "//zig/private/providers:all_files",
        "//zig/private/repo:all_files",
    ],
    visibility = ["//zig:__pkg__"],
)
