load(
    "@rules_zig//zig:defs.bzl",
    "zig_library",
    "zig_package",
    "zig_test",
)

_SRCS = [
    "src/Directory.zig",
    "src/discovery.zig",
    "src/Manifest.zig",
    "src/RepoMapping.zig",
    "src/RPath.zig",
    "src/Runfiles.zig",
]

zig_package(
    name = "runfiles",
    srcs = _SRCS,
    main = "runfiles.zig",
    visibility = ["//visibility:public"],
)

zig_test(
    name = "test",
    size = "small",
    srcs = _SRCS,
    cdeps = ["//zig/lib:libc"],
    data = ["test-data.txt"],
    main = "runfiles.zig",
)

# Only used for documentation generation.
zig_library(
    name = "lib",
    srcs = _SRCS,
    main = "runfiles.zig",
    tags = ["manual"],
)

filegroup(
    name = "docs",
    srcs = [":lib"],
    output_group = "zig_docs",
    visibility = ["//visibility:public"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":runfiles.zig",
        ":src/Directory.zig",
        ":src/Manifest.zig",
        ":src/RPath.zig",
        ":src/RepoMapping.zig",
        ":src/Runfiles.zig",
        ":src/discovery.zig",
    ],
    visibility = ["//zig:__pkg__"],
)
