load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    "//zig/private:settings.bzl",
    "MODE_VALUES",
    "THREADED_VALUES",
    "settings",
)

settings(
    name = "settings",
    mode = ":mode",
    threaded = ":threaded",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "mode",
    build_setting_default = "debug",
    values = MODE_VALUES,
    visibility = ["//zig/config/mode:__pkg__"],
)

string_flag(
    name = "threaded",
    build_setting_default = "multi",
    values = THREADED_VALUES,
    visibility = ["//zig/config/threaded:__pkg__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [":BUILD.bazel"],
    visibility = ["//zig:__pkg__"],
)
