load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":cache_test.bzl", "cache_test_suite")
load(":config_test.bzl", "config_test_suite")
load(":mode_test.bzl", "mode_test_suite")
load(":module_info_test.bzl", "module_info_test_suite")
load(":rules_test.bzl", "rules_test_suite")
load(":target_platform_test.bzl", "target_platform_test_suite")
load(":target_triple_test.bzl", "target_triple_test_suite")
load(":threaded_test.bzl", "threaded_test_suite")
load(":versions_test.bzl", "versions_test_suite")

cache_test_suite(name = "cache_test")

config_test_suite(name = "config_test")

mode_test_suite(name = "mode_test")

module_info_test_suite(name = "module_info_test")

rules_test_suite(name = "rules_test")

target_platform_test_suite(name = "target_platform_test")

target_triple_test_suite(name = "target_triple_test")

threaded_test_suite(name = "threaded_test")

versions_test_suite(name = "versions_test")

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//lib:unittest"],
)
