load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":bzlmod_zig_test.bzl", "bzlmod_zig_test_suite")
load(":cache_test.bzl", "cache_test_suite")
load(":config_test.bzl", "config_test_suite")
load(":linkmode_test.bzl", "linkmode_test_suite")
load(":mode_test.bzl", "mode_test_suite")
load(":module_info_test.bzl", "module_info_test_suite")
load(":rules_test.bzl", "rules_test_suite")
load(":semver_test.bzl", "semver_test_suite")
load(":target_platform_test.bzl", "target_platform_test_suite")
load(":target_triple_test.bzl", "target_triple_test_suite")
load(":threaded_test.bzl", "threaded_test_suite")
load(":toolchain_header_test.bzl", "toolchain_header_test_suite")
load(":versions_test.bzl", "versions_test_suite")

bzlmod_zig_test_suite(name = "bzlmod_zig_test")

cache_test_suite(name = "cache_test")

config_test_suite(name = "config_test")

linkmode_test_suite(name = "linkmode_test")

mode_test_suite(name = "mode_test")

module_info_test_suite(name = "module_info_test")

rules_test_suite(name = "rules_test")

semver_test_suite(name = "semver_test")

target_platform_test_suite(name = "target_platform_test")

target_triple_test_suite(name = "target_triple_test")

threaded_test_suite(name = "threaded_test")

toolchain_header_test_suite(name = "toolchain_header_test")

versions_test_suite(name = "versions_test")

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//lib:unittest"],
)
