load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_zig//zig:defs.bzl", "zig_configure")

genrule(
    name = "zig_version",
    outs = ["zig_version.actual"],
    cmd = "$(ZIG_BIN) version > $(OUTS)",
    tags = ["manual"],
    toolchains = ["@rules_zig//zig:resolved_toolchain"],
)

zig_configure(
    name = "zig_version_0.11.0",
    actual = ":zig_version",
    zig_version = "0.11.0",
)

diff_test(
    name = "zig_version_test_0.11.0",
    size = "small",
    file1 = ":zig_version_0.11.0.expected",
    file2 = ":zig_version_0.11.0",
)
