load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_zig//zig:defs.bzl", "zig_configure", "zig_configure_test", "zig_test")

genrule(
    name = "zig_version",
    outs = ["zig_version.actual"],
    cmd = "$(ZIG_BIN) version > $(OUTS)",
    tags = ["manual"],
    toolchains = ["@rules_zig//zig:resolved_toolchain"],
)

zig_configure(
    name = "zig_version_0.11.0",
    actual = ":zig_version",
    zig_version = "0.11.0",
)

diff_test(
    name = "zig_version_test_0.11.0",
    size = "small",
    file1 = ":zig_version_0.11.0.expected",
    file2 = ":zig_version_0.11.0",
)

zig_configure(
    name = "zig_version_0.11.0-dev.3886+0c1bfe271",
    actual = ":zig_version",
    zig_version = "0.11.0-dev.3886+0c1bfe271",
)

diff_test(
    name = "zig_version_test_0.11.0-dev.3886+0c1bfe271",
    size = "small",
    file1 = ":zig_version_0.11.0-dev.3886+0c1bfe271.expected",
    file2 = ":zig_version_0.11.0-dev.3886+0c1bfe271",
)

zig_test(
    name = "zig_test_0.11.0_manual",
    main = "test-0.11.0.zig",
    tags = ["manual"],
)

zig_configure_test(
    name = "zig_test_0.11.0",
    size = "small",
    actual = ":zig_test_0.11.0_manual",
    zig_version = "0.11.0",
)
