load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_zig//zig:defs.bzl", "zig_configure", "zig_configure_test", "zig_test")

genrule(
    name = "zig_version",
    outs = ["zig_version.actual"],
    cmd = "$(ZIG_BIN) version > $(OUTS)",
    tags = ["manual"],
    toolchains = ["@rules_zig//zig:resolved_toolchain"],
)

zig_configure(
    name = "zig_version_0.14.1",
    actual = ":zig_version",
    zig_version = "0.14.1",
)

diff_test(
    name = "zig_version_test_0.14.1",
    size = "small",
    file1 = ":zig_version_0.14.1.expected",
    file2 = ":zig_version_0.14.1",
)

zig_test(
    name = "zig_test_0.14.1_manual",
    main = "test-0.14.1.zig",
    tags = ["manual"],
)

zig_configure_test(
    name = "zig_test_0.14.1",
    size = "small",
    actual = ":zig_test_0.14.1_manual",
    zig_version = "0.14.1",
)

zig_configure(
    name = "zig_version_0.15.1",
    actual = ":zig_version",
    zig_version = "0.15.1",
)

diff_test(
    name = "zig_version_test_0.15.1",
    size = "small",
    file1 = ":zig_version_0.15.1.expected",
    file2 = ":zig_version_0.15.1",
)

zig_test(
    name = "zig_test_0.15.1_manual",
    main = "test-0.15.1.zig",
    tags = ["manual"],
)

zig_configure_test(
    name = "zig_test_0.15.1",
    size = "small",
    actual = ":zig_test_0.15.1_manual",
    zig_version = "0.15.1",
)
