load("@rules_zig//zig:defs.bzl", "zig_package", "zig_test")

zig_test(
    name = "direct-data",
    data = ["data.txt"],
    main = "direct-data.zig",
)

zig_package(
    name = "direct-package",
    data = ["data.txt"],
    main = "direct-package.zig",
)

zig_test(
    name = "direct-package-data",
    main = "direct-package-data.zig",
    deps = [":direct-package"],
)

zig_package(
    name = "indirect-package",
    main = "indirect-package.zig",
    deps = [":direct-package"],
)

zig_test(
    name = "indirect-package-data",
    main = "indirect-package-data.zig",
    deps = [":indirect-package"],
)
