load("@rules_zig//zig:defs.bzl", "zig_module", "zig_test")

zig_test(
    name = "direct-data",
    size = "small",
    data = ["data.txt"],
    main = "direct-data.zig",
)

zig_module(
    name = "direct-module",
    data = ["data.txt"],
    main = "direct-module.zig",
)

zig_test(
    name = "direct-module-data",
    size = "small",
    main = "direct-module-data.zig",
    deps = [":direct-module"],
)

zig_module(
    name = "indirect-module",
    main = "indirect-module.zig",
    deps = [":direct-module"],
)

zig_test(
    name = "indirect-module-data",
    size = "small",
    main = "indirect-module-data.zig",
    deps = [":indirect-module"],
)
