load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_library", "zig_package", "zig_test")

zig_binary(
    name = "binary",
    extra_srcs = ["message.txt"],
    main = "main.zig",
)

zig_library(
    name = "library",
    extra_srcs = ["message.txt"],
    main = "main.zig",
)

zig_test(
    name = "test",
    extra_srcs = ["message.txt"],
    main = "main.zig",
)

zig_package(
    name = "package",
    extra_srcs = ["message.txt"],
    main = "package.zig",
)

zig_test(
    name = "test-with-package",
    main = "test-with-package.zig",
    deps = [":package"],
)

build_test(
    name = "build",
    targets = [
        ":binary",
        ":library",
        ":test",
        ":test-with-package",
    ],
)

genrule(
    name = "output",
    outs = ["output.actual"],
    cmd = "$(execpath :binary) > $(OUTS)",
    tools = [":binary"],
)

diff_test(
    name = "output_test",
    file1 = ":output.expected",
    file2 = ":output.actual",
)
